--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <center><h2> Obras de Teatro</h2></center>
   <div id="bg-playlist-n" style="background-image: url(http://u.jimdo.com/www17/o/s224fc11c65cbc592/img/i9e1c3da81b40d6dd/1375646740/std/bg-play-list-2.png); height: 311px; width: 520px; margin-top: 0px; margin-right: auto; margin-bottom: 0px; margin-left: auto; position: relative; padding-top: 9px; background-repeat: no-repeat;">
 <div class="wrap" style="height: 280px; width: 500px; background-color: rgba(58, 58, 58, 0.36); margin-top: 0px; margin-right: auto; margin-left: auto; margin-bottom: 0px;">
-<iframe  allowfullscreen="" name="video" src="http://www.youtube.com/embed/bAVSWDi-5W4?feature=player_detailpage&amp;" frameborder="0" width="500" scrolling="no" height="280" id="video" class="xv"></iframe></div></div>
+<iframe  allowfullscreen="" name="video" src="http://www.youtube.com/embed/bAVSWDi-5W4?feature=player_detailpage&amp;" frameborder="0" width="500" scrolling="no" height="280" id="video" ></iframe></div></div>
 <center>
 <select name="name" onchange="video.location.href=this.options[this.selectedIndex].value">
 <option value="http://www.youtube.com/embed/bAVSWDi-5W4?feature=player_detailpage&amp;">
